# cpp_github_actions

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_main.cpp  tests_main.cpp
